<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@color/dusty"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="2"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/edtCodigo"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        android:textColorHint="@color/green_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txtServicios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <TextView
        android:id="@+id/txtArtista"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/artista"
        android:textColor="@color/darker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edtCodigo"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <Spinner
        android:id="@+id/spnArtista"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtCodigo"
        app:layout_constraintTop_toBottomOf="@id/txtArtista" />

    <EditText
        android:id="@+id/edtLugar"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/lugar"
        android:inputType="text"
        android:textColorHint="@color/darker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txtArtista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCodigo" />

    <EditText
        android:id="@+id/edtFecha"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="text"
        android:textColorHint="@color/darker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edtCodigo"
        app:layout_constraintTop_toBottomOf="@id/spnArtista" />

    <TextView
        android:id="@+id/txtZona"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/zona"
        android:textColor="@color/darker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txtServicios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtLugar" />

    <ListView
        android:id="@+id/ltvZona"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txtServicios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtZona" />

    <TextView
        android:id="@+id/txtServicios"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/servicio"
        android:textColor="@color/darker"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtZona"
        app:layout_constraintTop_toBottomOf="@id/edtFecha" />

    <!--
    <Switch
        android:id="@+id/swServEc"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/servEc"
        android:layout_marginTop="12dp"
        android:textColor="@color/darker"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtServicios"
        app:layout_constraintStart_toEndOf="@id/txtZona" />

    <Switch
        android:id="@+id/swServGen"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/servGen"
        android:layout_marginTop="12dp"
        android:textColor="@color/darker"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swServEc"
        app:layout_constraintStart_toEndOf="@id/txtZona" />

    <Switch
        android:id="@+id/swServVIP"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/servVIP"
        android:layout_marginTop="12dp"
        android:textColor="@color/darker"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swServGen"
        app:layout_constraintStart_toEndOf="@id/txtZona" />
    -->

    <!--
<RadioGroup
    android:id="@+id/gpoRadServicios"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/txtServicios"
    app:layout_constraintStart_toEndOf="@id/txtZona">

    <RadioButton
        android:id="@+id/radServEc"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/dark"
        android:textColor="@color/dark"
        android:checked="false"
        android:text="@string/servEc"
        app:useMaterialThemeColors="false" />

    <RadioButton
        android:id="@+id/radServGen"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/dark"
        android:textColor="@color/dark"
        android:checked="false"
        android:text="@string/servGen"
        app:useMaterialThemeColors="false" />

    <RadioButton
        android:id="@+id/radServVIP"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/dark"
        android:textColor="@color/dark"
        android:checked="false"
        android:text="@string/servVIP"
        app:useMaterialThemeColors="false"  />
</RadioGroup>
-->
    <!-- -->

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/gpoChServicios"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@id/txtZona"
        app:layout_constraintTop_toBottomOf="@id/txtServicios">

        <com.google.android.material.chip.Chip
            android:id="@+id/chServEc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/servEc"
            android:textSize="16sp"
            android:checkable="true"
            android:checked="false"
            android:textColor="@color/chip_text_color"
            app:chipBackgroundColor="@color/chip_background"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chServGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/servGen"
            android:textSize="16sp"
            android:checkable="true"
            android:checked="false"
            android:textColor="@color/chip_text_color"
            app:chipBackgroundColor="@color/chip_background"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chServVIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/servVIP"
            android:textSize="16sp"
            android:checkable="true"
            android:checked="false"
            android:textColor="@color/chip_text_color"
            app:chipBackgroundColor="@color/chip_background"
            app:useMaterialThemeColors="false" />
    </com.google.android.material.chip.ChipGroup>

    <ImageButton
        android:id="@+id/ibtnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/image_button_background"
        android:onClick="onClick"
        android:text="@string/agregar"
        app:layout_constraintEnd_toStartOf="@+id/ibtnBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ltvZona"
        app:srcCompat="@drawable/baseline_add_24"
        app:tint="@color/dusty" />

    <ImageButton
        android:id="@+id/ibtnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/image_button_background"
        android:onClick="onClick"
        android:text="@string/buscar"
        app:layout_constraintEnd_toStartOf="@+id/ibtnLimpiar"
        app:layout_constraintStart_toEndOf="@+id/ibtnAgregar"
        app:layout_constraintTop_toBottomOf="@id/ltvZona"
        app:srcCompat="@drawable/baseline_search_24"
        app:tint="@color/dusty" />

    <ImageButton
        android:id="@+id/ibtnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/image_button_background"
        android:onClick="onClick"
        android:text="@string/limpiar"
        app:layout_constraintEnd_toStartOf="@+id/ibtnEliminar"
        app:layout_constraintStart_toEndOf="@+id/ibtnBuscar"
        app:layout_constraintTop_toBottomOf="@id/ltvZona"
        app:srcCompat="@drawable/baseline_restore_24"
        app:tint="@color/dusty" />

    <ImageButton
        android:id="@+id/ibtnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/image_button_background"
        android:onClick="onClick"
        android:text="@string/eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibtnLimpiar"
        app:layout_constraintTop_toBottomOf="@id/ltvZona"
        app:srcCompat="@drawable/baseline_delete_24"
        app:tint="@color/dusty" />
</androidx.constraintlayout.widget.ConstraintLayout>